fix product list visibility

--- a/webfront/web/blocks/catalogCategory/catalogCategory.css
+++ b/webfront/web/blocks/catalogCategory/catalogCategory.css
@@ -21,6 +21,7 @@
     margin-bottom: -1px;
     text-decoration: none;
     position: relative;
+    transition: none !important;
     z-index: 1;
 }
 
